fixed new html background color but added white to body background instead for light mode and adjusting z-index for correct display

--- a/src/assets/styles/partials/_media-queries.scss
+++ b/src/assets/styles/partials/_media-queries.scss
@@ -1429,9 +1429,7 @@
         @include mainAfterProps;
     }
     .splash .galaxy {
-        .stars {
-            display: none;
-        }
+        display: none;
     }
 
     .subtleTextGradient {
